# garment-classification

./: .gitignore  README.md  final_model.h5  first-example.py  predict-using-model.py  q
images/test-cats-joined/: labels.csv
scripts/: arrange-set-2.sh  arrange-set.sh  label-set.sh  start-predict-container.sh
src/: backbone.py  build-server.py  classify-model.py  classify-server.py  garment-classification.py  hypermodel.py  mnist-classification-ver2.py  predict-docker-serving.py  predict-python-interface-test  predict-using-model.py  resnet-test.py  resnet101.py  resnet152.py  resnet50-keras-implementation.py  resnet50-manual-train.py  resnet50-old.py  resnet50.py  start-predict-container.sh  test-dataset.py  test-neural-net.py
src/backup/: resnet50-keras-implementation.py
src/build-model/: predict-using-model.py  resnet-build.py  resnet50-keras-implementation.py  start-predict-container.sh
src/build-predict-python-interface-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  predict-python-interface  predict-python-interface.cbp
src/classify/: predict-docker-serving.py
src/deprecated/serving-input-receiver/: sip.py
src/predict-python-interface/: CMakeLists.txt  main.cpp
src/test/: mnist-classification-ver1.py
src/test/serving-input-receiver/: resnet50-keras-implementation.py
src/train/: resnet50-keras-implementation.py
